# prototype-compra-venta-autolote

./: .env  Cargo.toml  hola.txt
bd/: Funcs.sql  db.sql  inserts.sql  seed.sql
export/: archivo.xlsx  sales.xlsx  seller.xlsx
src/: auth.rs  clients.rs  costs.rs  dashboard.rs  main.rs  sales.rs  sellers.rs  services.rs  statics.rs  vehicles.rs
static/css/: login.css  styles.css
static/js/: dashboard.js  site.js
templates/: base.html  clients.html  costs.html  index.html  sales.html  seller.html  vehicles.html
templates/log/: login.html
