[package]
name = "prototypeAutolote"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = {version = "0.4.38", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = {version = "1.0.210"}
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "bigdecimal"] }
bigdecimal = {version = "0.4.6", features = ["serde"] } 
tera = "1.20.0"
