[package]
name = "prototypeAutolote"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-files="0.6.6"
chrono = {version = "0.4.38", features = ["serde"]}
dotenv = "0.15.0"
env_logger = "0.11.5"
serde = {version = "1.0.210", features =["derive"]}
sqlx = { version = "0.8.2", features = ["runtime-async-std-native-tls", "postgres", "chrono", "bigdecimal"] }
bigdecimal = {version = "0.4.6", features = ["serde"] } 
tera = "1.20.0"
tokio = { version = "1.41.1", features = ["full"]}
rust_xlsxwriter = "0.79.4"
actix-session = "0.10.1"

